fix(Tech logos): the logos were too big, new css rule to scale them to 50%

--- a/src/styles/_custom_bootstrap.scss
+++ b/src/styles/_custom_bootstrap.scss
@@ -360,3 +360,7 @@ address i {
   background-color: $metallic-luxury !important;
   background: $metallic-luxury !important;
 }
+
+.tech-logo {
+  max-width: 50%;
+}
